# FederatedGeneticAlgorithm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: config.py
federatedgeneticalgorithm/: README.md  final_model.pt  pyproject.toml  requirements.txt
federatedgeneticalgorithm/federatedgeneticalgorithm/: __init__.py  client_app.py  genetic_algorithm.py  server_app.py  strategy.py  surrogate_model.py  task.py
federatedgeneticalgorithm/federatedgeneticalgorithm/config/: config.py
federatedgeneticalgorithm/scripts/: run_federated_learning.sh  run_federated_learning_cpu.sh  run_federated_learning_gpu.sh
notebooks/: deap_study.ipynb  mlp.ipynb
