[project]
name = "federated-learning"
version = "0.1.0"
requires-python = "==3.10.0"
dependencies = [
    "deap>=1.4.3",
    "flwr-datasets>=0.5.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
