# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federatedgeneticalgorithm"
version = "1.0.0"
requires-python = "==3.10.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "deap>=1.4.3",
    "flwr-datasets>=0.5.0",
    "flwr[simulation]>=1.23.0",
    "lion-pytorch>=0.2.3",
    "torch==2.7.1",
    "torchvision==0.22.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "lucas"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "federatedgeneticalgorithm.server_app:app"
clientapp = "federatedgeneticalgorithm.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 2
fraction-train = 0.5
local-epochs = 2
lr = 0.01
# Probabilidades de seleção para cada cliente (valores separados por vírgula, devem somar 1.0)
client-selection-probabilities = "0.15,0.12,0.10,0.08,0.10,0.12,0.08,0.10,0.08,0.07"

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
